--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="teams">
                 <img src="Aakash.jpg" height = "100px" alt="">
-                <div class="name">Aakash</div>
+                <div class="name">Akash Kumar</div>
                 <div class="desig">Developer</div>
                 <div class="about">A final Year Student of Computer Science and Engineering Department at Guru Ghasidas University </div>
 
@@ -45,7 +45,7 @@
 
             <div class="teams">
                 <img src="Mani.jpg" height = "100px" alt="">
-                <div class="name">Manishankar</div>
+                <div class="name">Mani Shankar Ray</div>
                 <div class="desig">Developer</div>
                 <div class="about">A final Year Student of Computer Science and Engineering Department at Guru Ghasidas University </div>
 
@@ -59,7 +59,7 @@
 
             <div class="teams">
                 <img src="Ankit.jpg" height = "100px" alt="">
-                <div class="name">Ankit </div>
+                <div class="name">Ankit Kumar </div>
                 <div class="desig">Developer</div>
                 <div class="about">A final Year Student of Computer Science and Engineering Department at Guru Ghasidas University </div>
 
